monolithic-stack.yaml
---
AWSTemplateFormatVersion: '2010-09-09'

Description: 'Monolithic Stack Example'

Resources:
  VPC:
    Type: 'AWS::EC2::VPC'
    Properties:
      CidrBlock: '192.168.0.0/16'
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName}'
  PublicSubnetA:
    Type: 'AWS::EC2::Subnet'
    Properties:
      AvailabilityZone: !Sub "${AWS::Region}a"
      CidrBlock: '192.168.0.0/24'
      Tags:
        - Key: Name
          Value: !Sub "${AWS::StackName}-publicA"
      VpcId: !Ref VPC
  PublicSubnetB:
    Type: 'AWS::EC2::Subnet'
    Properties:
      AvailabilityZone: !Sub "${AWS::Region}b"
      CidrBlock: '192.168.1.0/24'
      Tags:
        - Key: Name
          Value: !Sub "${AWS::StackName}-publicB"
      VpcId: !Ref VPC
  PrivateSubnetA:
    Type: 'AWS::EC2::Subnet'
    Properties:
      AvailabilityZone: !Sub "${AWS::Region}a"
      CidrBlock: '192.168.2.0/24'
      Tags:
        - Key: Name
          Value: !Sub "${AWS::StackName}-privateA"
      VpcId: !Ref VPC
  PrivateSubnetB:
    Type: 'AWS::EC2::Subnet'
    Properties:
      AvailabilityZone: !Sub "${AWS::Region}b"
      CidrBlock: '192.168.3.0/24'
      Tags:
        - Key: Name
          Value: !Sub "${AWS::StackName}-privateB"
      VpcId: !Ref VPC
  ExternalSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName:
        !Sub "${AWS::StackName}-external"
      GroupDescription: External security group
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '443'
          ToPort: '443'
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: !Sub "${AWS::StackName}-external"
      VpcId: !Ref VPC
  InternalSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName:
        !Sub "${AWS::StackName}-internal"
      GroupDescription: Internal security group
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '8080'
          ToPort: '8080'
          CidrIp:
            Fn::GetAtt:
              - VPC
              - CidrBlock
      Tags:
        - Key: Name
          Value: !Sub "${AWS::StackName}-internal"
      VpcId: !Ref VPC
